<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_x_demo</name>
  <version>1.0.1</version>
  <description>open_manipulator_x_teleop</description>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/rjshim/open_manipulator_x_demo</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>open_manipulator_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
